Added validation checkpoint saving and resume
Signed-off-by: Jasper Potts <1466205+jasperpotts@users.noreply.github.com>